# HieDb

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  hiedb.cabal
.github/workflows/: haskell-ci.yml
exe/: Main.hs
ghc-paths-0.1.0.9/: LICENSE  Setup.hs  ghc-paths.buildinfo  ghc-paths.cabal
sqlite-simple-0.4.16.0/Database/SQLite/Simple/: Ok.hs
src/: HieDb.hs  Main.hs
src/HieDb/: Compat.hs  Create.hs  Dump.hs  Html.hs  Query.hs  Run.hs  Types.hs  Utils.hs
test/: Main.hs
test-lib/: README.md
test/Test/: Orphans.hs
test/data/: Foo.hs  Module1.hs
test/data/One/Two/: Some.hs
test/data/Sub/: Module2.hs
