cabal-version:       2.4
name:                hiedb
version:             0.1.0.0
synopsis:            Generates a references DB from .hie files
description:         Tool and library to index and query a collection of `.hie` files
bug-reports:         https://github.com/wz1000/HieDb/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Zubin Duggal
maintainer:          zubin.duggal@gmail.com
copyright:           Zubin Duggal
category:            Development
extra-source-files:  CHANGELOG.md


source-repository head
  type: git
  location: https://github.com/wz1000/HieDb

executable hiedb
  hs-source-dirs:      exe
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , hiedb
                     , ghc-paths
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     HieDb,
                       HieDb.Utils,
                       HieDb.Create,
                       HieDb.Query,
                       HieDb.Types,
                       HieDb.Dump,
                       HieDb.Html,
                       HieDb.Run
  build-depends:       base >= 4.12 && < 4.15
                     , ghc >= 8.6
                     , array
                     , containers
                     , filepath
                     , directory
                     , mtl
                     , sqlite-simple
                     , hie-compat
                     , time
                     , text
                     , bytestring
                     , algebraic-graphs
                     , lucid
                     , optparse-applicative
                     , terminal-size
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite hiedb-tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    build-tool-depends: hiedb:hiedb
    other-modules:      Paths_hiedb
    autogen-modules:    Paths_hiedb
    build-depends:      base >= 4.12 && < 4.15
                      , directory
                      , hspec
                      , process
                      , temporary
                      , test-lib
    default-language:   Haskell2010

-- Private library used in tests
library test-lib
    hs-source-dirs:     test-lib
    exposed-modules:    One.Two.Some
                        Foo
    build-depends:      base >= 4.12 && < 4.15
    default-language:   Haskell2010
    ghc-options:        -fwrite-ide-info -hiedir=.hie
                    