cabal-version:       2.4
name:                hiedb
version:             0.6.0.1
synopsis:            Generates a references DB from .hie files
description:         Tool and library to index and query a collection of `.hie` files
bug-reports:         https://github.com/wz1000/HieDb/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Zubin Duggal
maintainer:          zubin.duggal@gmail.com
copyright:           Zubin Duggal
category:            Development
extra-doc-files:
  README.md
  CHANGELOG.md
extra-source-files:
  test/data/*.hs
  test/data/Sub/*.hs
tested-with:         GHC ==9.0.2
                      || ==9.2.8
                      || ==9.4.8
                      || ==9.6.5
                      || ==9.8.2
                      || ==9.10.1

source-repository head
  type: git
  location: https://github.com/wz1000/HieDb

common common-options
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 4.21
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages
                       -Wno-name-shadowing

executable hiedb
  import:              common-options
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base
                     , hiedb
                     , ghc-paths

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HieDb,
                       HieDb.Utils,
                       HieDb.Create,
                       HieDb.Query,
                       HieDb.Compat,
                       HieDb.Types,
                       HieDb.Dump,
                       HieDb.Html,
                       HieDb.Run
  build-depends:       ghc >= 8.6 && < 9.11
                     , array
                     , containers
                     , filepath
                     , directory
                     , mtl
                     , sqlite-simple
                     , hie-compat ^>= 0.3
                     , text
                     , bytestring
                     , algebraic-graphs >= 0.3
                     , lucid
                     , optparse-applicative
                     , extra
                     , ansi-terminal >= 0.9
                     , terminal-size >= 0.2

test-suite hiedb-tests
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Test.Orphans
  build-tool-depends: hiedb:hiedb
  build-depends:      directory
                    , filepath
                    , ghc-paths
                    , hiedb
                    , hspec
                    , process
                    , temporary
