name: ghc-paths
version: 0.1.0.9
x-revision: 4
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
stability: stable
synopsis: Knowledge of GHC's installation directories
description: Knowledge of GHC's installation directories
category: Development
cabal-version: >= 1.6
build-type: Custom

custom-setup
        setup-depends: base >= 3, Cabal >= 1.6, directory

library
        build-depends: base >= 3
        exposed-modules: GHC.Paths

source-repository head
  type:     git
  location: https://github.com/simonmar/ghc-paths
